--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype>
 <html>
 <head>
-<title>index</title>
+<title>Tribute page</title>
 <link rel="stylesheet" href="s1.css">
 </head>
 <body>
