--- a/index.html.html
+++ b/index.html.html
@@ -1,21 +1,24 @@
 <!doctype>
 <html>
 <head>
+<style>
+
+</style>
 <title>Tribute page</title>
 <link rel="stylesheet" href="s1.css">
 </head>
 <body>
 <div class="main">
 <div class="middle">
-<img  src="Dr Norman.png"alt="Dr.Norman Borlaug" width=95% height=170%>
+<img  src="Dr Norman.png"alt="Dr.Norman Borlaug" class="image">
 </div>
 <div class="right">
-<p>
+<p class="quote">
 There are 6.6 billion on the planet today. With organic farming we could only feed four billion of them.Which two billion would volunteer to die?</p>
-<p><b>
+<p class="name"><i>
 Dr. Norman Borlaug
-<p></b>
-<p><b>1914-2009</p></b>
+</i></p>
+<p class="date"><b>1914-2009</b></p>
 </div>
 </div>
 </body>
