--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
 
 </style>
 <title>Tribute page</title>
-<link rel="stylesheet" href="s1.css">
+<link rel="stylesheet" href="./src/css/style.css">
 </head>
 <body>
 <div class="main">
 <div class="middle">
-<img  src="Dr Norman.png"alt="Dr.Norman Borlaug" class="image">
+<img  src="./src/img/Dr Norman.png"alt="Dr.Norman Borlaug" class="image">
 </div>
 <div class="right">
 <p class="quote">
